# rlgl

./: .gitignore  .gitmodules  CMakeLists.txt  OpenGL_rela.sln  README.md
Examples/Example1_single_cube/: CMakeLists.txt  Example1_App.cpp  Example1_App.h  main.cpp
Examples/Example2_cubes/: CMakeLists.txt  Example2_App.cpp  Example2_App.h  main.cpp
Examples/Example3_spheres/: CMakeLists.txt  Example3_App.cpp  Example3_App.h  main.cpp
Examples/Example4_multi_lights/: CMakeLists.txt  Example4_App.cpp  main.cpp
Examples/Example5_playground/: CMakeLists.txt  Example5_App.cpp  Example5_App.h
Examples/Example5_simpleLOD/: CMakeLists.txt  Example5_App.cpp  Example5_App.h
Examples/Example6_instancing/: CMakeLists.txt  Example6_App.cpp  Example6_App.h  main.cpp
Examples/Example7_raytrace_picking/: CMakeLists.txt  Example6_App.cpp  Example7_App.cpp  Example7_App.h  main.cpp
Examples/Example8_frustumCulling/: CMakeLists.txt  Example8_App.cpp  Example8_App.h  main.cpp
Examples/ExampleQT1/: CMakeLists.txt  ExampleQT1_App.cpp  ExampleQT1_App.h  main.cpp  mainwindow.cpp  mainwindow.h  rlglQOpenGLWidget.cpp  rlglQOpenGLWidget.h
Examples/rlglPlayGround/: CMakeLists.txt  main.cpp  rlglPlayGroundApp.cpp  rlglPlayGroundApp.h
OpenGL_rela/: CMakeLists.txt  MyApp.cpp  MyApp.h  OpenGL_rela.cpp  OpenGL_rela.vcxproj  OpenGL_rela.vcxproj.filters  SampleApp.cpp  SampleApp.h  fragmentShaderSimple.fs  rlglCamera.cpp  rlglCamera.h  rlglMaterial.cpp  rlglMaterial.h  rlglMesh.cpp  rlglMesh.h  rlglObject.cpp  rlglObject.h  rlglRenderer.cpp  rlglRenderer.h  rlglScene.cpp  rlglScene.h  rlglShader.cpp  rlglShader.h  rlglShapeGeometry.cpp  rlglShapeGeometry.h  vertexShaderSimple.vs
OpenGL_rela/x64/Debug/: OpenGL_rela.exe.recipe  OpenGL_rela.ilk  opengl_rela.obj.enc  vc142.idb
OpenGL_rela/x64/Debug/OpenGL_rela.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL_rela.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL_rela/x64/Release/: OpenGL_rela.exe.recipe  OpenGL_rela.iobj  OpenGL_rela.ipdb
OpenGL_rela/x64/Release/OpenGL_rela.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL_rela.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
data/shaders/: background_shader.fs  background_shader.vs  grass.fs  grass.vs  object.fs  object_col.fs  object_col.vs  object_col_light_mat.fs  object_col_light_mat.vs  object_inst.vs  object_tex.fs  object_tex_light.fs  object_tex_light.vs  object_tex_light_mat.fs  object_tex_multilight_mat.fs  sky_cubemap.fs  sky_cubemap.vs  ui_element.vs
docs/: MaterialClasses.pptx
rlCommon/: CMakeLists.txt  rlCommon.vcxproj  rlCommon.vcxproj.filters  rlGeometry.cpp  rlGeometry.h  rlMath.cpp  rlMath.h  rlRayIntersection.cpp  rlRayIntersection.h
rlOctStruct/: rlOctStruct.cpp  rlOctStruct.h  rlOctStruct.vcxproj  rlOctStruct.vcxproj.filters  rlOctStructTree.cpp  rlOctStructTree.h  rlOctree.cpp  rlOctree.h  rlOctreeStruct.h
rlOctree/: CMakeLists.txt  rlOctree.cpp  rlOctree.h  rlOctree.vcxproj  rlOctreeStruct.cpp
rlTest_rlOctStruct/: rlTest_rlOctStruct.cpp  rlTest_rlOctStruct.vcxproj  rlTest_rlOctStruct.vcxproj.filters
rlTest_rlOctree/: rlTest_rlOctree.vcxproj  rlTest_rlOctree.vcxproj.filters
rlTest_rlgl/: main.cpp  rlTest_rlgl.vcxproj
rlgl/: CMakeLists.txt  SampleApp.cpp  SampleApp.h  glad.c  rlgl.vcxproj  rlgl.vcxproj.filters  rlglBaseApp.cpp  rlglBaseApp.h  rlglBaseModel.cpp  rlglBaseModel.h  rlglCamera.cpp  rlglCamera.h  rlglColors.cpp  rlglColors.h  rlglConfig.cpp  rlglConfig.h  rlglDefaultMeshes.cpp  rlglDefaultMeshes.h  rlglErrors.h  rlglLightProperties.cpp  rlglLightProperties.h  rlglLodController.cpp  rlglLodController.h  rlglMaterial.cpp  rlglMaterial.h  rlglMath.cpp  rlglMath.h  rlglMesh.cpp  rlglMesh.h  rlglMeshBank.cpp  rlglMeshBank.h  rlglMeshGenerator.cpp  rlglMeshGenerator.h  rlglObject.cpp  rlglObject.h  rlglRenderer.cpp  rlglRenderer.h  rlglScene.cpp  rlglScene.h  rlglShader.cpp  (+6 more)
rlgl/x64/Debug/rlgl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
scripts/: build.bat  build.sh  configure.bat  configure.sh  runEx1.sh  runEx2.sh  runEx3.sh
